data/derived/comb/progs/unify/prog7912.ml.out
Characters 151-152:
  (carry, a @ [sum % 10])
          ^
Error: This expression has type int * 'a
       but an expression was expected of type 'b list
